--- a/style.css
+++ b/style.css
@@ -1,3 +1,18 @@
 table, th, td {
     border:1px solid black;
   }
+
+  #animation {
+    width: 100px;
+    height: 100px;
+    background-color: red;
+    animation-name: example;
+    animation-duration: 4s;
+  }
+  
+  @keyframes example {
+    0%   {background-color: red;}
+    25%  {background-color: yellow;}
+    50%  {background-color: blue;}
+    100% {background-color: green;}
+  }
